[package]
name = "brumby"
version = "0.5.0"
edition = "2021"
readme = "README.md"
authors = ["Emil Koutanov"]
license = "MIT"
description = "A fast, allocation-free Monte Carlo model of a top-N podium finish in racing events."
repository = "https://github.com/obsidiandynamics/brumby"
keywords = ["montecarlo", "simulation", "quant"]
exclude = ["/images", "/bin", "/.idea", "/.github", "/coverage", "/doc", "/examples"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
clap = { version =  "4.4.6", features = ["derive"] }
racing_scraper = "0.0.8"
serde_json = "1.0.107"
stanza = "0.3.0"
tinyrand = "0.5.0"
tokio={version="1.32.0",features=["full"]}
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
bytes = "1.5.0"
linregress = "0.5.3"
ordinalizer = "0.1.0"
strum = "0.25.0"
strum_macros = "0.25.3"
serde = { version = "1.0.189", features = ["derive"] }
thiserror = "1.0.50"

[dev-dependencies]
assert_float_eq = "1.1.3"
criterion = { version = "0.5.1", features = ["html_reports"] }
tinyrand-alloc = "0.5.0"

[[bench]]
name = "cri_comb"
harness = false

[[bench]]
name = "cri_mc"
harness = false

[[bench]]
name = "cri_mc_engine"
harness = false

[[bench]]
name = "cri_selection"
harness = false
