[workspace]
resolver = "2"
members = [
    "brumby"
]

[workspace.package]
version = "0.6.0"
edition = "2021"
readme = "README.md"
authors = ["Emil Koutanov"]
license = "MIT"
description = "A fast, allocation-free Monte Carlo model of a top-N podium finish in racing events."
repository = "https://github.com/obsidiandynamics/brumby"
keywords = ["montecarlo", "simulation", "quant"]
exclude = ["/images", "/bin", "/.idea", "/.github", "/coverage", "/doc", "/examples"]