[workspace]
resolver = "2"
members = [
    "brumby",
    "brumby-racing",
    "brumby-soccer"
]

[workspace.package]
version = "0.7.3"
edition = "2021"
authors = ["Emil Koutanov"]
license = "MIT"
description = "Derivatives and multiples pricing for racing and sports."
repository = "https://github.com/obsidiandynamics/brumby"
keywords = ["model", "probability", "quant", "betting"]
exclude = ["/images", "/bin", "/.idea", "/.github", "/coverage", "/doc", "/examples"]

[workspace.dependencies]
anyhow = "1.0.75"
bincode = "2.0.0-rc.3"
chrono = "0.4.31"
clap = { version =  "4.4.6", features = ["derive"] }
racing_scraper = "0.0.19"
tinyrand = "0.5.0"
tokio={version="1.32.0",features=["full"]}
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
bytes = "1.5.0"
linregress = "0.5.3"
ordinalizer = "0.1.0"
regex = "1.10.2"
strum = "0.25.0"
strum_macros = "0.25.3"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
stanza = "0.5.1"
thiserror = "1.0.50"
rustc-hash = "1.1.0"

# dev dependencies
assert_float_eq = "1.1.3"
criterion = { version = "0.5.1", features = ["html_reports"] }
tinyrand-alloc = "0.5.0"
