[package]
name = "brumby-soccer"
version.workspace = true
edition.workspace = true
readme.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
exclude.workspace = true

[dependencies]
brumby = { version = "0.7.2", path = "../brumby" }
anyhow = { workspace = true }
clap = { workspace = true }
ordinalizer = { workspace = true }
racing_scraper = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
stanza = { workspace = true }
strum = { workspace = true }
strum_macros ={ workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
assert_float_eq = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "cri_interval"
harness = false

[[bench]]
name = "cri_isolate"
harness = false
