[package]
name = "brumby-soccer"
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
exclude.workspace = true

[dependencies]
brumby = { version = "0.7.3", path = "../brumby" }
bincode = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
ordinalizer = { workspace = true }
racing_scraper = { workspace = true }
regex = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
stanza = { workspace = true }
strum = { workspace = true }
strum_macros ={ workspace = true }
tokio = { workspace = true }
thiserror =  { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
assert_float_eq = { workspace = true }
criterion = { workspace = true }
brumby-testing = { version = "0.7.3", path = "../brumby-testing" }

[[bench]]
name = "cri_interval"
harness = false

[[bench]]
name = "cri_isolate"
harness = false
