[package]
name = "brumby"
readme = "../README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
exclude.workspace = true

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
clap = { workspace = true }
racing_scraper = { workspace = true }
serde_json = { workspace = true }
stanza = { workspace = true }
tinyrand = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bytes = { workspace = true }
linregress = { workspace = true }
ordinalizer = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
rustc-hash = { workspace = true }

[dev-dependencies]
assert_float_eq = { workspace = true }
criterion = { workspace = true }
tinyrand-alloc = { workspace = true }

[[bench]]
name = "cri_comb"
harness = false

[[bench]]
name = "cri_mc"
harness = false

[[bench]]
name = "cri_mc_engine"
harness = false

[[bench]]
name = "cri_selection"
harness = false
